kiwix-desktop rc4
=================

 * New "Settings" page
 * Better aria2c error message
 * Fix Reading list with bookmarks from missing books
 * Support video fullscreen mode
 * Support the default zoom level setting
 * Support zoom level per content
 * Remove page view source feature

kiwix-desktop rc3
=================

 * Correctly display a book in the local library at the end of download.
 * Do not display the context menu on the toolbar.
 * Remove the status bar.
 * Disable useless actions when displaying the library page.
 * Allow user to download files (epub) from a zim files.
 * Do not display obsolet bookmarks after removing a book from a library.
 * Correctly display zim's icons in the local library page.
 * Add "donate" action in the menu.
 * Display a tooltip with the url when a link is "mouse over".
 * Fix some debug information print on the console.

kiwix-desktop rc2
=================

 * Close tab on middle (scroll wheel) click.
 * Do not display hidden zim tag (starting with `_`) in the content manager.
 * Close all tabs displaying a book when we remove the book from the library.
 * Fix icons around the top bar.
 * Do not display the zim id in the searchbar.
 * Add a icons to the windows executable.
 * Remove the "Save page ..." action.
 * Correctly run kiwix-serve with the correct library.xml.

kiwix-desktop rc1
=================

 * Fix random crash when opening article (race condition).
 * Alert user if there is not enough place to download a zim file.
 * Better searchbar completion and validation.
 * Use the library.xml along the kiwix-desktop binary if present.
   (For kiwix-desktop+content on a usb key)
 * Better content manager design (css, icons, ...)
 * Add few shortcuts (alt+home, ctrl+mousewheel)
 * Refresh only information about downloading books instead of all books.
 * Remove RPATH from the binaries.
 * Add a new tag button.
 * Remove categories without content.
 * Integrate kiwix-serve (can run kiwix-serve from kiwix-desktop)7